--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,11 @@
   <head>
     <title>GithubMagnifier</title>
     <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag    'application' %>
   </head>
-
   <body>
-    <%= yield %>
+  	<div id="root" >
+  	</div>
   </body>
+    <%= javascript_pack_tag 'application' %>
 </html>
