brought react div into specific view, added a catch all route

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_pack_tag    'application' %>
   </head>
-  	<div id="root" >
-  	</div>
+  <body>
+    <%= yield %>
   </body>
     <%= javascript_pack_tag 'application' %>
 </html>
